--- a/dmx/launchd/com.uberzach.olad.plist
+++ b/dmx/launchd/com.uberzach.olad.plist
@@ -6,13 +6,12 @@
 	<string>tv</string>
 	<key>LimitLoadToHosts</key>
 	<array>
-		<string>beddy.uberzach.com</string>
 		<string>heady.uberzach.com</string>
 	</array>
 	<key>RunAtLoad</key>
 	<true/>
 	<key>Label</key>
-	<string>com.uberzach.plexMonitor.gui</string>
+	<string>com.uberzach.olad</string>
 	<key>KeepAlive</key>
 	<dict>
 		<key>NetworkState</key>
@@ -20,8 +19,10 @@
 	</dict>
 	<key>ProgramArguments</key>
 	<array>
-		<string>/Users/tv/bin/video/plexMonitor-gui</string>
-		<string>15</string>
+		<string>/opt/local/bin/olad</string>
+		<string>-s</string>
+		<string>-i</string>
+		<string>127.0.0.1</string>
 	</array>
 </dict>
 </plist>
