Now in perl. Faster, less syscalls

--- a/dmx/launchd/com.uberzach.ola.rope.plist
+++ b/dmx/launchd/com.uberzach.ola.rope.plist
@@ -19,7 +19,7 @@
 	</dict>
 	<key>ProgramArguments</key>
 	<array>
-		<string>/Users/tv/bin/video/dmx/rope.sh</string>
+		<string>/Users/tv/bin/video/dmx/rope.pl</string>
 	</array>
 </dict>
 </plist>
