Make the rope delay runtime-configurable

--- a/dmx/launchd/com.uberzach.ola.rope.plist
+++ b/dmx/launchd/com.uberzach.ola.rope.plist
@@ -20,6 +20,7 @@
 	<key>ProgramArguments</key>
 	<array>
 		<string>/Users/tv/bin/video/dmx/rope.pl</string>
+		<string>0.25</string>
 	</array>
 </dict>
 </plist>
