--- a/amplifier/launchd/com.uberzach.amplifier.power.plist
+++ b/amplifier/launchd/com.uberzach.amplifier.power.plist
@@ -11,11 +11,14 @@
 	<key>RunAtLoad</key>
 	<true/>
 	<key>Label</key>
-	<string>com.uberzach.amplifier.off</string>
+	<string>com.uberzach.amplifier.power</string>
 	<key>KeepAlive</key>
 	<dict>
-		<key>NetworkState</key>
-		<true/>
+		<key>OtherJobEnabled</key>
+		<dict>
+			<key>com.uberzach.amplifier</key>
+			<true/>
+		</dict>
 	</dict>
 	<key>ProgramArguments</key>
 	<array>
